--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -1,29 +1,29 @@
-<div class="navigationButtonGroup">
+<section layout="horizontal" layout-align="center center" class="navigation-buttons">
 
-    <button class="btn btn-primary" ng-click="stateGo('operatorControl')">Operator Control</button>
-    <button class="btn btn-primary" ng-click="stateGo('alarms')">Alarms</button>
-    <button class="btn btn-primary" ng-click="stateGo('health')">Health and State</button>
-
-
-    <button class="btn btn-primary" ng-click="stateGo('scheduler')">Scheduler</button>
-    <button class="btn btn-primary" ng-click="stateGo('weather')">Weather</button>
-    <button class="btn btn-primary" ng-click="stateGo('sensorGraph')">Sensor Graphs</button>
-
-    <button class="btn btn-primary" ng-click="stateGo('admin')">Admin</button>
-    <button class="btn btn-primary" disabled>Log Reports</button>
-    <button class="btn btn-primary" disabled>Source Catalogues</button>
+    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('operatorControl')">Operator Control</material-button>
+    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('alarms')">Alarms</material-button>
+    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('health')">Health and State</material-button>
 
 
-    <!--<button class="btn btn-primary"></button>-->
-    <!--<button class="btn btn-primary"></button>-->
-    <!--<button class="btn btn-primary"></button>-->
+    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('scheduler')">Scheduler</material-button>
+    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('weather')">Weather</material-button>
+    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('sensorGraph')">Sensor Graphs</material-button>
+
+    <material-button class="material-button-raised material-button-colored" ng-click="stateGo('admin')">Admin</material-button>
+    <material-button class="material-button-raised material-button-colored" disabled>Log Reports</material-button>
+    <material-button class="material-button-raised material-button-colored" disabled>Source Catalogues</material-button>
 
 
-    <!--<button class="btn btn-primary"></button>-->
-    <!--<button class="btn btn-primary"></button>-->
-    <!--<button class="btn btn-primary"></button>-->
+    <!--<button class="material-button-colored"></button>-->
+    <!--<button class="material-button-colored"></button>-->
+    <!--<button class="material-button-colored"></button>-->
 
-    <!--<button class="btn btn-primary"></button>-->
-    <!--<button class="btn btn-primary"></button>-->
-    <!--<button class="btn btn-primary"></button>-->
-</div>
+
+    <!--<button class="material-button-colored"></button>-->
+    <!--<button class="material-button-colored"></button>-->
+    <!--<button class="material-button-colored"></button>-->
+
+    <!--<button class="material-button-colored"></button>-->
+    <!--<button class="material-button-colored"></button>-->
+    <!--<button class="material-button-colored"></button>-->
+</section>
