--- a/app/widgets/navigation/navigation-widget.html
+++ b/app/widgets/navigation/navigation-widget.html
@@ -1,4 +1,4 @@
-<section layout="horizontal" layout-align="center center" class="navigation-buttons">
+<section layout-align="center center" class="navigation-buttons">
 
     <material-button class="material-button-raised material-button-colored" ng-click="stateGo('operatorControl')">Operator Control</material-button>
     <material-button class="material-button-raised material-button-colored" ng-click="stateGo('alarms')">Alarms</material-button>
