--- a/app/operator-control/receptor-state/receptor-state.html
+++ b/app/operator-control/receptor-state/receptor-state.html
@@ -1,7 +1,12 @@
-<div class="receptor-state-div">
-    <h3>{{name}}</h3>
-    <span>{{state}}</span>
-    <span ng-if="inhibited" ng-click="alertMessage()" class="inhibited">Inhibited</span>
-</div>
+<material-item layout="vertical" layout-align="center center" class="receptor-state-div">
+    <div>
+        <h3>{{name}}</h3>
+        <span>{{state}}</span>
+    </div>
+    <div class="inhibited">
+        <span ng-show="inhibited" ng-click="alertMessage()" >Inhibited</span>
+    </div>
+</material-item>
 
-<h1>{{message}}</h1>
+<!--<h1>{{message}}</h1>-->
+
