--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <!-- Add New Bower Component JS Above -->
 
 <!-- build:js js/jquery.ui.sortable.min.js -->
-<script type="text/javascript" src="bower_components/jquery-ui/jquery-ui.js"></script>
+<script type="text/javascript" src="bower_components/jquery-ui/ui/jquery-ui.js"></script>
 <!-- endbuild -->
 
 <!-- Main App JS -->
@@ -143,7 +143,7 @@
                 <button class="button-toolbar-flat-icon"
                         style="margin-left: 0px; padding: 0px;"
                         ng-click="showSideNav = !showSideNav">
-                    <i class="fa fa-navicon"></i>
+                    <i class="fa" ng-class="{'fa-angle-left': showSideNav, 'fa-angle-right': !showSideNav}"></i>
                 </button>
 
                 <div class="btn-group"
