--- a/app/operator-control/operator-control.html
+++ b/app/operator-control/operator-control.html
@@ -6,7 +6,7 @@
                 <span>{{title}}</span>
             </div>
         </material-toolbar>
-        <section layout="horizontal" layout-align="center center" class="panel-body panel-operator-controls" >
+        <section layout="horizontal" layout-align="center center" class="panel-body panel-operator-controls">
             <material-button class="material-button-raised material-button-colored">Inhibit All</material-button>
             <material-button class="material-button-raised material-button-colored">Stow All</material-button>
             <material-button class="material-button-raised material-button-colored">Stop All</material-button>
@@ -14,22 +14,15 @@
             <material-button class="material-button-raised material-button-colored">Shutdown Computing</material-button>
         </section>
 
-        <!--<table class="table">-->
-            <!--<tbody>-->
-                <!--<tr ng-repeat="cols in receptors">-->
-                    <!--<td ng-repeat="obj in cols">-->
-                        <!--<receptor-state receptorName="{{obj.receptor.name}}" receptorState="{{obj.receptor.state}}" inhibited="{{obj.receptor.inhibited}}"></receptor-state>-->
-                    <!--</td>-->
-                <!--</tr>-->
-            <!--</tbody>-->
-        <!--</table>-->
-
-        <div style="margin: 5px; display: inline-block;">
-            <material-list ng-repeat="obj in receptorsData">
-                <receptor-state receptorName="{{obj.name}}" receptorState="{{obj.state}}"
-                                inhibited="{{obj.inhibited}}"></receptor-state>
-            </material-list>
-        </div>
+        <material-list class="receptor-state-list">
+            <material-item ng-repeat="obj in receptorsData track by $id(obj)" class="receptor-state-div">
+                <h2>{{obj.name}}</h2>
+                <span>{{obj.state}}</span>
+                <div ng-if="obj.inhibited" class="inhibited">
+                    <span>Inhibited</span>
+                </div>
+            </material-item>
+        </material-list>
     </div>
 
 </div>
