--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -12,11 +12,12 @@
             <material-button class="material-button-raised material-button-colored">Clear</material-button>
             <material-button class="material-button-raised material-button-colored">Something</material-button>
             <material-button class="material-button-raised material-button-colored">Another thing</material-button>
+            <material-checkbox ng-model="showLargeAlarms" aria-label="Show Detailed Alarms">Show Detailed Alarms</material-checkbox>
         </section>
 
         <div class="alarmsGridStyle" ng-grid="gridOptionsAlarms"></div>
 
-        <div ng-if="alarmsData.length === 0"><h3 style="width: 100%; text-align: center;">Could not retrieve alarms</h3></div>
+        <!--<div ng-if="alarmsData.length === 0"><h3 style="width: 100%; text-align: center;">Could not retrieve alarms</h3></div>-->
 
     </div>
 </div>
