--- a/index.html
+++ b/index.html
@@ -36,15 +36,23 @@
 <!-- Livereload script for development only (stripped during dist build) -->
 <script src="http://localhost:35729/livereload.js" data-concat="false"></script>
 
+<script src="bower_components/jquery/jquery.js"></script>
+<script src="bower_components/jquery-ui/ui/jquery.ui.core.js"></script>
+<script src="bower_components/jquery-ui/ui/jquery.ui.widget.js"></script>
+<script src="bower_components/jquery-ui/ui/jquery.ui.mouse.js"></script>
+<script src="bower_components/jquery-ui/ui/jquery.ui.sortable.js"></script>
+
 <!-- JS from Bower Components -->
 <script src="bower_components/angular/angular.js"></script>
+<script src="bower_components/hammerjs/hammer.js"></script>
 <script src="bower_components/angular-material/angular-material.js"></script>
 <script src="bower_components/less.js/dist/less-1.6.2.js" data-concat="false"></script>
-<script src="bower_components/jquery/jquery.js"></script>
+
 <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 <script src="bower_components/underscore/underscore.js"></script>
 <script src="bower_components/moment/moment.js"></script>
 <script src="bower_components/sockjs/sockjs.js"></script>
+<script src="bower_components/angular-aria/angular-aria.js"></script>
 
 <script src="bower_components/angular-mocks/angular-mocks.js"></script>
 <script src="bower_components/ng-grid/ng-grid-2.0.13.min.js"></script>
@@ -58,10 +66,6 @@
 <script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
 <script src="bower_components/angular-gantt/assets/angular-gantt.js"></script>
 <!-- Add New Bower Component JS Above -->
-
-<!-- build:js js/jquery.ui.sortable.min.js -->
-<script type="text/javascript" src="bower_components/jquery-ui/ui/jquery-ui.js"></script>
-<!-- endbuild -->
 
 <!-- Main App JS -->
 <script src="app/app.js"></script>
