--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <!-- Add New Component JS Above -->
 
 <section layout="horizontal" layout-fill>
-    <material-sidenav layout="vertical" ng-show="showSideNav && !navbarCollapsed" style="box-shadow: 0px 8px 17px 1px rgba(0, 0, 0, 0.2);">
+    <material-sidenav component-id="left-sidenav" layout="vertical" ng-show="showSideNav && showNavbar" style="box-shadow: 0px 8px 17px 1px rgba(0, 0, 0, 0.2);">
         <material-toolbar class="material-theme-light material-medium-tall">
             <h1 class="material-toolbar-tools" style="padding-top:25px; padding-left: 25px; font-size: 1.5em;">katGUI</h1>
         </material-toolbar>
@@ -140,7 +140,7 @@
     </material-sidenav>
 
     <section layout="vertical" flex>
-        <material-toolbar ng-show="!navbarCollapsed" class="material-theme-dark">
+        <material-toolbar ng-show="showNavbar" class="material-theme-dark">
             <div class="material-toolbar-tools" layout="horizontal">
 
                 <button class="button-toolbar-flat-icon"
@@ -214,21 +214,17 @@
             </div>
 
         </material-toolbar>
-        <material-content ui-view scroll-y flex class="material-content-padding">
+        <material-content id="ui-view-container-div" ui-view scroll-y flex class="material-content-padding">
         </material-content>
     </section>
 </section>
 
-
-<!--!navbarCollapsed && userLoggedIn-->
-
 <button class="unselectable toolbar-collapse-button"
-        ng-click="navbarCollapsed = !navbarCollapsed">
+        ng-click="showNavbar = !showNavbar">
     <i class="fa"
-       ng-class="{ 'fa-caret-square-o-up': !navbarCollapsed,  'fa-caret-square-o-down': navbarCollapsed, 'toolbar-collapse-button-grey': navbarCollapsed}"></i>
+       ng-class="{ 'fa-caret-square-o-up': showNavbar,  'fa-caret-square-o-down': !showNavbar, 'toolbar-collapse-button-grey': !showNavbar}"></i>
 </button>
 
-<!--ng-show="userLoggedIn"-->
 <div style="pointer-events: none;" alarm></div>
 
 </body>
