added some box-shadows to controls, started with overhaul for scheduleblock display

--- a/app/alarms/alarms.html
+++ b/app/alarms/alarms.html
@@ -1,7 +1,7 @@
 <div class="view-container" ng-controller="AlarmsCtrl">
 
-    <div class="panel panel-default">
-        <material-toolbar class="panel-toolbar-turquoise">
+    <div class="material-whiteframe-z1">
+        <material-toolbar class="panel-toolbar">
             <div class="material-toolbar-tools">
                 <span>Alarms</span>
             </div>
