--- a/app/scheduler/scheduler.html
+++ b/app/scheduler/scheduler.html
@@ -1,72 +1,150 @@
 <div class="view-container" style="min-width: 1300px;" ng-controller="SchedulerCtrl">
 
-    <div id="schedulerDatePickerMenu" class="datepickerMenu" ng-show="showDatePicker">
-        <datetimepicker data-ng-model="currentSelectedDate" data-on-set-time="onTimeSet"></datetimepicker>
+    <div id="schedulerDatePickerMenu" class="datepickerMenu material-whiteframe-z1" ng-show="showDatePicker">
+        <datetimepicker data-ng-model="currentSelectedDate" data-on-set-time="onTimeSet(newDate, oldDate)"></datetimepicker>
     </div>
 
-    <div class="panel panel-default">
-        <div class="panel-heading text-center">
-            <h3>Scheduler</h3>
-        </div>
-        <div class="panel-body">
-            <table>
-                <tr>
-                    <td>
-                        <div class="panel panel-default panel-content">
-                            <div class="panel-heading">
-                                <div class="draft-controls">
-                                    <button ng-click="addDraftSchedule()"><span class="fa fa-plus"></span></button>
-                                </div>
-                                <div class="panel-heading-text-drafts">
-                                    Schedule Drafts
-                                </div>
-                            </div>
-                            <div class="gridStyle" ng-grid="gridOptionsDrafts"></div>
-                        </div>
+    <div id="schedulerTypePickerMenu" ng-show="showTypePicker" class="datepickerMenu material-whiteframe-z1">
+        <material-list>
+            <material-item ng-repeat="type in types">
+                <button ink-ripple role="menuitem" class="menu-item" ng-click="setScheduleDraftType(type)">{{type}}</button>
+            </material-item>
+        </material-list>
+    </div>
 
-                        <div class="no-style-centered">
-                            <button ng-class="{disabled: draftSelections.length === 0}" ng-click="moveDraftsToSchedule()">
-                                <span class="fa fa-chevron-down"></span>
-                                <span class="fa fa-chevron-down"></span>
-                            </button>
 
-                            <button ng-class="{disabled: scheduleSelections.length === 0}"
-                                    ng-click="moveSchedulesToDraft()">
-                                <span class="fa fa-chevron-up"></span>
-                                <span class="fa fa-chevron-up"></span>
-                            </button>
-                        </div>
+    <div class="material-whiteframe-z1">
 
-                        <div class="panel panel-default panel-content">
-                            <div class="panel-heading">
-                                <h3 class="panel-title">Observation Schedule</h3>
-                            </div>
+        <div layout="vertical" layout-padding>
 
-                            <div class="gridStyle" ng-grid="gridOptionsSchedules"></div>
+            <div layout="vertical" class="schedule-draft-data-list">
+                <material-toolbar class="panel-toolbar">
+                    <div class="material-toolbar-tools">
+                        <material-button class="material-button-fab material-theme-light-blue"
+                                         ng-click="addDraftSchedule()">
+                            <span class="fa fa-plus material-fab-fa-icon"></span>
+                        </material-button>
+                        <span>Schedule Drafts</span>
+                    </div>
+                </material-toolbar>
+                <!--<div class="gridStyle" ng-grid="gridOptionsDrafts"></div>-->
+                <material-list id="schedule-draft-data-list" class="material-whiteframe-z1" style="padding: 0;">
 
-                        </div>
-                    </td>
-                    <td>
-                        <div class="schedule-block-details">
-                            <div class="panel panel-default panel-content">
-                                <div class="panel-heading">
-                                    <div class="panel-heading-text-drafts">
-                                        Schedule Block Details
+                    <material-item ng-repeat="item in scheduleDraftData track by item.id" ng-click="setSelectedScheduleDraft(item.id)" ng-class="{'selected-schedule-row': item.id === idSelectedScheduleDraft}">
+                        <material-item-content>
+                            <div class="material-tile-content schedule-draft-item" style="padding: 8px;">
+                                <span class="schedule-block-id">{{item.id}}:</span>
+                                <div layout="horizontal" style="float:right;">
+                                    <div layout="vertical" >
+                                        <div layout="horizontal">
+                                            <material-button style="margin-right: 5px; width: 180px;" class="material-button-raised schedule-item-input"
+                                                             ng-click="openDatePicker($index, $event);">
+                                                <span ng-if="item.desiredTime">{{item.desiredTime}}</span>
+                                                <span ng-if="!item.desiredTime">Select Time</span>
+                                                <span flex></span>
+                                                <span class="caret"></span>
+                                            </material-button>
+                                            <material-button style="width: 122px;" class="material-button-raised dropdown-toggle schedule-item-input" type="button" data-toggle="dropdown"
+                                                             ng-click="openTypePicker($index, $event);">
+                                                {{item.type}}
+                                                <span flex></span>
+                                                <span class="caret"></span>
+                                            </material-button>
+                                        </div>
+                                        <div style="text-align: right; margin-top: 5px;">
+                                            <h4>{{item.owner}} - {{item.state}}</h4>
+                                        </div>
                                     </div>
+                                    <material-button style="margin-left: 10px;" class="material-button-fab material-theme-red" ng-click="removeDraftRow($index)">
+                                        <span class="fa fa-minus material-fab-fa-icon"></span>
+                                    </material-button>
                                 </div>
-                                <div class="">
-                                    <textarea>{{selectedScheduleBlockDetails}}</textarea>
+
+                                <div style="text-overflow: ellipsis; overflow: hidden; white-space: nowrap;">
+                                   {{item.description}}
                                 </div>
                             </div>
+                        </material-item-content>
+                    </material-item>
+                </material-list>
+            </div>
 
-                        </div>
-                    </td>
-                </tr>
+            <div class="centered-content">
+                <material-button class="material-button-raised material-button-colored"
+                                 ng-attr-value="{{draftSelections.length === 0 && 'disabled'}}"
+                                 ng-click="moveDraftsToSchedule()">
+                    <span class="fa fa-chevron-down"></span>
+                    <span class="fa fa-chevron-down"></span>
+                </material-button>
 
+                <material-button style="margin-left: 3px;" class="material-button-raised material-button-colored"
+                                 ng-class="{disabled: scheduleSelections.length === 0}"
+                                 ng-click="moveSchedulesToDraft()">
+                    <span class="fa fa-chevron-up"></span>
+                    <span class="fa fa-chevron-up"></span>
+                </material-button>
+            </div>
 
-            </table>
         </div>
+        <!--<div class="panel-body">-->
+        <!--<table>-->
+        <!--<tr>-->
+        <!--<td>-->
+        <!--<div class="panel panel-default panel-content">-->
+        <!--<div class="panel-heading">-->
+        <!--<div class="draft-controls">-->
+        <!--<button ng-click="addDraftSchedule()"><span class="fa fa-plus"></span></button>-->
+        <!--</div>-->
+        <!--<div class="panel-heading-text-drafts">-->
+        <!--Schedule Drafts-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--<div class="gridStyle" ng-grid="gridOptionsDrafts"></div>-->
+        <!--</div>-->
 
+        <!--<div class="no-style-centered">-->
+        <!--<button ng-class="{disabled: draftSelections.length === 0}" ng-click="moveDraftsToSchedule()">-->
+        <!--<span class="fa fa-chevron-down"></span>-->
+        <!--<span class="fa fa-chevron-down"></span>-->
+        <!--</button>-->
+
+        <!--<button ng-class="{disabled: scheduleSelections.length === 0}"-->
+        <!--ng-click="moveSchedulesToDraft()">-->
+        <!--<span class="fa fa-chevron-up"></span>-->
+        <!--<span class="fa fa-chevron-up"></span>-->
+        <!--</button>-->
+        <!--</div>-->
+
+        <!--<div class="panel panel-default panel-content">-->
+        <!--<div class="panel-heading">-->
+        <!--<h3 class="panel-title">Observation Schedule</h3>-->
+        <!--</div>-->
+
+        <!--<div class="gridStyle" ng-grid="gridOptionsSchedules"></div>-->
+
+        <!--</div>-->
+        <!--</td>-->
+        <!--<td>-->
+        <!--<div class="schedule-block-details">-->
+        <!--<div class="panel panel-default panel-content">-->
+        <!--<div class="panel-heading">-->
+        <!--<div class="panel-heading-text-drafts">-->
+        <!--Schedule Block Details-->
+        <!--</div>-->
+        <!--</div>-->
+        <!--<div class="">-->
+        <!--<textarea>{{selectedScheduleBlockDetails}}</textarea>-->
+        <!--</div>-->
+        <!--</div>-->
+
+        <!--</div>-->
+        <!--</td>-->
+        <!--</tr>-->
+
+
+        <!--</table>-->
     </div>
+
+</div>
 
 </div>
