--- a/app/widgets/gantt/gantt-widget.html
+++ b/app/widgets/gantt/gantt-widget.html
@@ -1,4 +1,4 @@
-<div class="panel panel-default" ng-controller="GanttWidgetCtrl">
+<div class="panel panel-default" style="box-shadow: none;" ng-controller="GanttWidgetCtrl">
 
     <div class="panel-heading">
         <!--<h3>Current Schedule Blocks</h3>-->
