--- a/index.html
+++ b/index.html
@@ -55,7 +55,6 @@
 <script src="bower_components/angular-aria/angular-aria.js"></script>
 
 <script src="bower_components/angular-mocks/angular-mocks.js"></script>
-<script src="bower_components/ng-grid/ng-grid-2.0.13.min.js"></script>
 <script src="bower_components/angular-ui-router/release/angular-ui-router.js"></script>
 <script src="bower_components/angular-animate/angular-animate.js"></script>
 <script src="bower_components/angular-resource/angular-resource.js"></script>
@@ -65,6 +64,7 @@
 <script src="bower_components/angular-dashboard-framework/dist/angular-dashboard-framework.min.js"></script>
 <script src="bower_components/angular-bootstrap-datetimepicker/src/js/datetimepicker.js"></script>
 <script src="bower_components/angular-gantt/assets/angular-gantt.js"></script>
+<script src="bower_components/ng-grid/ng-grid-2.0.13.min.js"></script>
 <!-- Add New Bower Component JS Above -->
 
 <!-- Main App JS -->
@@ -189,8 +189,8 @@
                 <span flex></span>
 
                 <div>
-                    <a class="toolbar-anchor">{{utcTime}}</a><a class="toolbar-anchor" style="font-size: 9pt;"> UTC</a><br/>
-                    <a class="toolbar-anchor">{{localTime}}</a><a class="toolbar-anchor" style="font-size: 9pt;"> Local</a>
+                    <span class="toolbar-time-span">{{utcTime}}</span><span class="toolbar-time-span" style="font-size: 9pt;"> UTC</span><br/>
+                    <span class="toolbar-time-span">{{localTime}}</span><span class="toolbar-time-span" style="font-size: 9pt;"> Local</span>
                 </div>
 
                 <button class="button-toolbar-flat-icon"
